Rounded corners and fixed overlapping border and title in selection

--- a/src/pages/newPost/newPost.css
+++ b/src/pages/newPost/newPost.css
@@ -12,6 +12,7 @@
 .npFormContainer {
   background-color: #FFFFFF;
   padding-bottom: 2%;
+  border-radius: 8px;
 }
 
 .npTableElementTitleForum {
